default/objects/Health_Check__c/Health_Check__c.object-meta.xml
<CustomObject>
    <label>Health Check</label>
    <nameField>
        <label>Health Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>