default/objects/Health_Check__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Belgium-FR</fullName>
            </value>
            <value>
                <fullName>Belgium-NL</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Switzerland-DE</fullName>
            </value>
            <value>
                <fullName>Switzerland-FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>