default/objects/Health_Check__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>