default/objects/Health_Check__c/fields/First_Contentful_Paint__c.field-meta.xml
<CustomField>
    <fullName>First_Contentful_Paint__c</fullName>
    <label>First Contentful Paint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>