default/objects/Health_Check__c/fields/From_Step__c.field-meta.xml
<CustomField>
    <fullName>From_Step__c</fullName>
    <label>From Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>