default/objects/Health_Check__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Health Checks</relationshipLabel>
    <relationshipName>Health_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>