default/objects/Health_Check__c/fields/Speed_Index__c.field-meta.xml
<CustomField>
    <fullName>Speed_Index__c</fullName>
    <label>Speed Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>