default/objects/Health_Check__c/fields/Start_Action__c.field-meta.xml
<CustomField>
    <fullName>Start_Action__c</fullName>
    <label>Start Action</label>
    <type>DateTime</type>
</CustomField>