default/objects/Health_Check__c/fields/Time_execution__c.field-meta.xml
<CustomField>
    <fullName>Time_execution__c</fullName>
    <label>Time execution, ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>