default/objects/Health_Check__c/fields/To_Step__c.field-meta.xml
<CustomField>
    <fullName>To_Step__c</fullName>
    <label>To Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>