default/objects/Health_Check__c/listViews/Automated_test.listView-meta.xml
<ListView>
    <fullName>Automated_test</fullName>
    <columns>NAME</columns>
    <columns>Device__c</columns>
    <columns>Country__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Automated</value>
    </filters>
    <label>Automated test</label>
    <language>en_US</language>
</ListView>